--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hometask2",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/index.jsx",
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve --config webpack.config.js",
+    "start": "webpack serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
