--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/preset-react": "^7.14.5",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
